--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
   "dependencies": {
-    "inquirer": "^8.2.5"
-  }
+    "color-convert": "^2.0.1",
+    "inquirer": "^8.2.5",
+    "jest": "^25.0.0"
+  },
+  "name": "svg_logo_generator",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "example": "examples",
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
