--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "color-convert": "^2.0.1",
     "inquirer": "^8.2.5",
     "jest": "^25.0.0",
+    "svg.js": "^2.7.1",
     "validate-color": "^2.2.4"
   },
   "name": "svg_logo_generator",
