--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "color-convert": "^2.0.1",
     "inquirer": "^8.2.5",
-    "jest": "^25.0.0",
+    "jest": "^25.5.4",
     "svg.js": "^2.7.1",
     "validate-color": "^2.2.4"
   },
@@ -15,7 +15,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
